[gd_scene load_steps=2 format=2]

[ext_resource path="res://src/UI/Setup/InputLineItem.gd" type="Script" id=1]

[node name="InputLineItem" type="HBoxContainer"]
anchor_right = 1.0
margin_bottom = 24.0
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="InputLineEdit" type="LineEdit" parent="."]
margin_right = 1024.0
margin_bottom = 24.0
size_flags_horizontal = 3
size_flags_vertical = 3
expand_to_text_length = true
clear_button_enabled = true

[connection signal="focus_entered" from="InputLineEdit" to="." method="_on_InputLineEdit_focus_entered"]
[connection signal="focus_exited" from="InputLineEdit" to="." method="_on_InputLineEdit_focus_exited"]
